force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/Common_JSON_Mapping_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Common JSON Mapping Setting</label>
    <pluralLabel>Common JSON Mapping Settings</pluralLabel>
</CustomObject>