force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>