force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>