force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>