force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/fields/ResponseFieldKey__c.field-meta.xml
<CustomField>
    <fullName>ResponseFieldKey__c</fullName>
    <label>Response Field Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>