force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/fields/ResponseObjectKey__c.field-meta.xml
<CustomField>
    <fullName>ResponseObjectKey__c</fullName>
    <label>Response Object Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>