force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/fields/Sobject__c.field-meta.xml
<CustomField>
    <fullName>Sobject__c</fullName>
    <label>Sobject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>