force-app/main/default/objects/Common_JSON_Mapping_Setting__mdt/listViews/Claim_Mappings.listView-meta.xml
<ListView>
    <fullName>Claim_Mappings</fullName>
    <columns>Sobject__c</columns>
    <columns>Field__c</columns>
    <columns>ResponseFieldKey__c</columns>
    <columns>Default_Value__c</columns>
    <columns>ResponseObjectKey__c</columns>
    <columns>Active__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Claim Mappings</label>
</ListView>